レイアウトパーツ1〜10

--- a/layout_parts/q1/css/style.css
+++ b/layout_parts/q1/css/style.css
@@ -1,5 +1,33 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: block;
+}
 
+.container {
+  background-color: #eff3f4;
+  margin: 0 auto;
+  padding: 20px 0;
+  width: 940px;
+}
+
+.block {
+  background-color: #3274ae;
+  float: left;
+  margin-left: 20px;
+  padding: 20px;
+}
+
+.block__text {
+  background-color: #eaf4ff;
+  border: 10px solid #022336;
+  box-sizing: border-box;
+  font-size: 16px;
+  padding: 20px;
+  text-align: 16px;
+  width: 230px;
+}
 /* 回答はここに書いてね */
