--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -1,5 +1,40 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: block;
+}
 
+.container {
+  background-color: #eff3f4;
+  margin: 0 auto;
+  width: 900px;
+  padding: 20px;
+}
+
+.top-block {
+  float: left;
+}
+
+.top-block__img {
+  float: left;
+  margin: 0 20px 10px 0;
+}
+
+.block__text {
+  font-size: 18px;
+  line-height: 22px;
+  word-break: break-all;
+}
+
+.bottom-block__img {
+  float: right;
+  margin:0 0 10px 20px;
+}
+
+.bottom-block {
+  float: right;
+}
 /* 回答はここに書いてね */
