--- a/layout_parts/q4/css/style.css
+++ b/layout_parts/q4/css/style.css
@@ -1,5 +1,48 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.bar {
+  box-sizing: border-box;
+  display: table;
+  padding: 20px;
+  width: 100%;
+}
 
+.bar:first-child {
+  padding-bottom: 0;
+}
+
+.bar__column {
+  display: table-cell;
+  padding: 20px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.bar__topleft {
+  background-color: #fdc8b8;
+  width: 100px;
+}
+
+.bar__topcenter {
+  background-color: #e0abd9;
+}
+
+.bar__topright {
+  background-color: #b6d8ed;
+  width: 100px;
+}
+
+.bar__bottomleft {
+  background-color: #e5d32e;
+}
+
+.bar__bottomcenter {
+  background-color: #ec8f93;
+}
+
+.bar__bottomright {
+  background-color: #8fdcad;
+  width: 500px;
+}
 /* 回答はここに書いてね */
