--- a/layout_parts/q5/css/style.css
+++ b/layout_parts/q5/css/style.css
@@ -2,4 +2,103 @@
 
 /* 回答はここに書いてね */
 
+.container {
+  background-color: #ecf1f2;
+  height: 500px;
+  margin: 0 auto;
+  position: relative;
+  width: 500px;
+}
+
+.square {
+  font-size: 30px;
+  font-weight: bold;
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+  width: 100px;
+}
+
+.one {
+  background-color: #ffefd3;
+  position: absolute;
+  top: 40px;
+  left: 200px;
+}
+
+.one::after {
+  background-color: #ffefd3;
+  content: "";
+  display: block;
+  height: 20px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 20px;
+  z-index: 8;
+}
+
+.two {
+  background-color: #7084de;
+  position: absolute;
+  top: 120px;
+  left: 280px;
+  z-index: 1;
+}
+
+.three {
+  background-color: #d0ecea;
+  position: absolute;
+  top: 200px;
+  left: 360px;
+  z-index: 2;
+}
+
+.four {
+  background-color: #8b7a5e;
+  position: absolute;
+  top: 280px;
+  left: 280px;
+  z-index: 3;
+}
+
+.five {
+  background-color: #9fd6d2;
+  position: absolute;
+  top: 360px;
+  left: 200px;
+  z-index: 4;
+}
+
+.six {
+  background-color: #fffee4;
+  position: absolute;
+  top: 280px;
+  left: 120px;
+  z-index: 5;
+}
+
+.seven {
+  background-color: #deae70;
+  position: absolute;
+  top: 200px;
+  left: 40px;
+  z-index: 6;
+}
+
+.eight {
+  background-color: #de70cf;
+  position: absolute;
+  top: 120px;
+  left: 120px;
+  z-index: 7;
+}
+
+.nine {
+  background-color: #2b69a3;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+}
+
 /* 回答はここに書いてね */
