--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -1,5 +1,309 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.clearfix:after {
+  content: "";
+  clear: both;
+  display: block;
+}
 
+.btn-first {
+  background-color: #00bcd4;
+  color: #fff;
+  display: inline-block;
+}
+
+.btn-second {
+  background-color: #ff4081;
+  color: #fff;
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.btn-third {
+  background-color: #e5e5e5;
+  color: #fff;
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.btn-fourth {
+  background-color: #fff;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, .12), 0 1px 4px rgba(0, 0, 0, .12);
+  color: #222;
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.btn-small {
+  border-radius: 3px;
+  font-size: 16px;
+  height: 26px;
+  line-height: 26px;
+  padding: 0 15px;
+}
+
+.btn-middle {
+  border-radius: 5px;
+  font-size: 20px;
+  height: 32px;
+  line-height: 32px;
+  padding: 0 20px;
+}
+
+.btn-large {
+  border-radius: 7px;
+  font-size: 24px;
+  height: 38px;
+  line-height: 38px;
+  padding: 0 25px;
+}
+
+.btn:hover {
+  cursor: pointer;
+}
+
+/*head*/
+.form__wrapper {
+  background-color: #ecf1f2;
+  margin: 0 auto;
+  padding: 20px;
+  width: 700px;
+}
+
+.form__head {
+  margin-bottom: 20px;
+  overflow: hidden;
+}
+
+.form__head__text {
+  display: inline-block;
+  font-size: 24px;
+  font-weight: bold;
+  padding-right: 10px;
+  position: relative;
+}
+
+.form__head__text:after {
+  border-top: 1px solid #ccc;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  width: 99em;
+}
+
+.caution {
+  color: red;
+}
+
+.main {
+  float: left;
+  width: 300px;
+}
+
+.form__container {
+  margin-bottom: 20px;
+}
+
+.form__container > li {
+  margin-top: 20px;
+}
+
+.form__container > li:first-child {
+  margin-top: 0;
+}
+
+.form__content {
+  float: left;
+  line-height: 25px;
+  text-align: right;
+  width: 100px;
+}
+
+.form__input__list {
+  float: right;
+  width: 180px;
+}
+
+.form__input {
+  margin: 0;
+  padding: 0;
+  background: none;
+  border: none;
+  border-radius: 0;
+  font-size: 16px;
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.form__input__info {
+  background-color: #fff;
+  border-radius: 3px;
+  box-sizing: border-box;
+  font-size: 12px;
+  line-height: 12px;
+  padding: 5px;
+  width: 100%;
+}
+
+.form__input__info:focus {
+  box-shadow: 0 0 7px #00bcd4;
+}
+
+.label {
+  cursor: pointer;
+}
+.radio__btn {
+  display: none;
+}
+
+.input__radio + .label {
+  padding-left: 20px;
+  position: relative;
+  margin-right: 20px;
+}
+
+.input__radio + .label::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+  border: 1px solid #fff;
+  border-radius: 50%;
+}
+
+.input__radio:checked + .label::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  width: 11px;
+  height: 11px;
+  background-color: #00bcd4;
+  border-radius: 50%;
+}
+
+.selecter {
+  position: relative;
+}
+
+.selecter:after {
+  border-bottom: 2px solid #e5e5e5;
+  border-right: 2px solid #e5e5e5;
+  content: "";
+  display: block;
+  height: 8px;
+  pointer-events: none;
+  transform: rotate(45deg);
+  width: 8px;
+  position: absolute;
+  top: 4px;
+  right: 10px;
+}
+
+.form__selecter {
+  background-color: #fff;
+  border-radius: 3px;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 12px;
+  line-height: 12px;
+  padding: 5px;
+  width: 100%;
+}
+
+.checkbox {
+  text-align: right;
+}
+
+.checkbox__btn {
+  display: none;
+}
+
+.checkbox__text {
+  padding-left: 20px;
+  position: relative;
+}
+
+.checkbox__text::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 15px;
+  width: 15px;
+  background-color: #fff;
+}
+
+.checkbox__btn:checked + .checkbox__text::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -5px;
+  left: 5px;
+  width: 7px;
+  height: 14px;
+  transform: rotate(45deg);
+  border-bottom: 3px solid #00bcd4;
+  border-right: 3px solid #00bcd4;
+}
+
+.form__btn {
+  text-align: right;
+}
+
+.main__btn {
+  background-color: #00bcd4;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 26px;
+  padding: 0 10px;
+}
+
+.main__btn:active {
+  background-color: #fff;
+  color: #00bcd4;
+}
+/*side*/
+.side {
+  float: right;
+  width: 380px;
+}
+
+.side__input {
+  margin: 0;
+  padding: 0;
+  background: none;
+  border: none;
+  border-radius: 0;
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.side__comment {
+  background-color: #fff;
+  box-sizing: border-box;
+  height: 203px;
+  font-size: 12px;
+  padding: 10px;
+  resize: none;
+  width: 100%;
+}
+
+.side__comment:focus {
+  box-shadow: 0 0 7px #00bcd4;
+}
 /* 回答はここに書いてね */
