--- a/layout_parts/q9/css/style.css
+++ b/layout_parts/q9/css/style.css
@@ -1,5 +1,65 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.top__img {
+  cursor: pointer;
+  height: 333px;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+  width: 500px;
+}
 
+.image {
+  transition: transform 0.5s;
+}
+
+.image:hover {
+  transform: scale(1.5);
+}
+
+.image:hover + .mask {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.mask {
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 8));
+  box-sizing: border-box;
+  height: 100%;
+  pointer-events: none;
+  transition: 0.5s;
+  width: 500px;
+  position: absolute;
+  bottom: -100%;
+  left: 0;
+
+}
+
+.mask__text {
+  color: white;
+  font-size: 16px;
+  line-height: 16px;
+  padding: 20px;
+  word-break: break-all;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.circle {
+  width: 100px;
+  height: 100px;
+  border: 10px solid #ecf1f2;
+  border-top: 10px solid #00bcd4;
+  border-radius: 50%;
+  margin: 0 auto;
+  animation: spin 1.1s linear 0s infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 /* 回答はここに書いてね */
