--- a/layout_parts/q1/css/style.css
+++ b/layout_parts/q1/css/style.css
@@ -9,8 +9,9 @@
 
 .container {
   background-color: #eff3f4;
+  box-sizing: border-box;
   margin: 0 auto;
-  padding: 20px 0;
+  padding: 20px;
   width: 940px;
 }
 
@@ -19,6 +20,10 @@
   float: left;
   margin-left: 20px;
   padding: 20px;
+}
+
+.block:first-child {
+  margin-left: 0;
 }
 
 .block__text {
