--- a/layout_parts/q3/css/style.css
+++ b/layout_parts/q3/css/style.css
@@ -1,32 +1,32 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
-.table {
+.table__menu {
   border: 1px solid #dedede;
   table-layout: fixed;
   text-align: center;
   width: 100%;
 }
 
-.table th, .table td {
+.table__menu th, .table__menu td {
   border: 1px solid #dedede;
   font-size: 16px;
   line-height: 22px;
   padding: 10px 0;
 }
 
-.table th, .table td:first-child {
+.table__menu th {
   background-color: #24a;
   color: #fff;
   font-size: 18px;
   line-height: 26px;
 }
 
-.table tr:nth-child(odd) {
+.table__menu tr:nth-child(odd) {
   background-color: #ecf1f2;
 }
 
-.table tr:last-child {
+.table__menu tr:last-child {
   border-top: 2px dashed #000;
 }
 /* 回答はここに書いてね */
