--- a/layout_parts/q6/css/style.css
+++ b/layout_parts/q6/css/style.css
@@ -48,7 +48,6 @@
 
 .flex__text {
   background-color: #fff;
-  display: inline-block;
   padding: 10px;
 }
 
@@ -63,7 +62,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  margin: auto auto;
+  margin: auto;
 }
 
 /*transform*/
